unpackaged/main/default/objects/QLI_Tracker__c/QLI_Tracker__c.object-meta.xml
<CustomObject>
    <label>QLI Tracker</label>
    <nameField>
        <displayFormat>QT-{0000000}</displayFormat>
        <label>QLI Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QLI_Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>