unpackaged/main/default/objects/QLI_Tracker__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>QLI_Tracker</relationshipLabel>
    <relationshipName>QLI_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>