unpackaged/main/default/objects/QLI_Tracker__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <label>QuoteId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>